# fractured_json_python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: build-and-publish.yml  code-coverage.yml  run-all-tests.yml
docs/: README.md
src/fractured_json/: __init__.py  __init__.pyi  _fractured_json.py  _version.py  _wrappergen.py
tests/: conftest.py  test_console_script.py  test_coverage.py  test_formatter.py  test_formatting.py
tests/data/: test-comments-0.ref-1.jsonc  test-fj-issue-36.ref-1.json  test-issue-10.ref-1.json  test-issue-18.ref-1.json  test-issue-18a.json  test-issue-18a.ref-1.json  test-issue-2.ref-1.json  test-issue-2.ref-2.json  test-issue-20.ref-1.json  test-issue-20.ref-3.json  test-issue-31.ref-1.json  test-issue-4.ref-1.json  test-issue-4a.json  test-issue-4a.ref-1.json  test-wide-chars.ref-1.json
