[project]
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: C", "Operating System :: OS Independent",]
dependencies = [
 "wcwidth>=0.2.8",
 "pythonnet>=3.0.5",
 "hatchling>=1.28.0",
]
description = "JSON formatter that produces highly readable but fairly compact output."
license = "MIT"
name = "fractured-json"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dynamic = ["version"]

[[project.authors]]
email = "python@figsandfudge.com"
name = "Jon Connell"

[dependency-groups]
dev = [
 "pytest-console-scripts",
 "pytest-cov",
 "requests>=2.32.5",
 "ruff",
 "beautifulsoup4>=4.14.3",
 "pytest-check>=2.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src/fractured_json"]

[tool.hatch.build]
artifacts = ["src/fractured_json/_version.py"]

[tool.hatch.version]
path = "src/fractured_json/_version.py"

[project.urls]
documentation = "https://github.com/masaccio/fractured-json/blob/main/README.md"
repository = "https://github.com/masaccio/fractured-json"

[project.scripts]
fractured-json = "fractured_json._fractured_json:main"

[tool.ruff]
fix = true
ignore = [ "T201",]
line-length = 100
select = [ "ALL",]
target-version = "py311"

[tool.tox]
requires = [ "tox>=4.0",]
envlist = [ "py39", "py310", "py311", "py312", "py313",]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"src/fractured_json/__init__.pyi" = [ "ANN401", "PYI035",]
"src/fractured_json/generated/**" = [ "E501", "D100", "D104",]
"tests/**" = [ "PTH123", "PLR2004", "S101", "D100", "D103", "ANN201", "ANN001",]

[tool.coverage.run]
branch = true
omit = [ "src/fractured_json/generated/*.py",]

[tool.coverage.html]
directory = "coverage_html_report"
show_contexts = true

[tool.pytest.ini_options]
addopts = "--cov=src/fractured_json --cov-report=html --cov-report=term-missing:skip-covered --cov-context=test"
